images and content writing

--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -123,69 +123,36 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-1.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/rooms/shivalik.jpg" alt="pg img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Shivalik PG</a></h4>
+                        <span class="aa-product-price">Rs. 4900</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-2.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/rooms/saharapg.jpg" alt="pg img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
+                        <h4 class="aa-product-title"><a href="#">Sahara PG</a></h4>
+                        <span class="aa-product-price">Rs. 5500/month</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-3.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/rooms/mundi.jpg" alt="hostel img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Divine Home Mundi Hostel</a></h4>
+                        <span class="aa-product-price">Rs. 4900/month</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-4.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                          
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-5.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                 
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-6.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                          
                   </li>
                 </ul>
               </div>
