--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   </div>
                   <div class="aa-single-promo-right">
                     <div class="aa-promo-banner">                      
-                      <img src="img/promo-banner-5.jpg" alt="img">                      
+                      <img src="img/otherspromo.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <h4><a href="#">Others</a></h4>                        
                       </div>
@@ -333,7 +333,7 @@
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
                             <a class="aa-product-img" href="#"><img src="img/rooms/shivalik.jpg" alt="shivalik img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                             <figcaption>
                               <h4 class="aa-product-title"><a href="#">Shivalik PG</a></h4>
                               <span class="aa-product-price">Rs. 4900/month</span>
@@ -343,7 +343,7 @@
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
                             <a class="aa-product-img" href="#"><img src="img/rooms/saharapg.jpg" alt="sahara img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                             <figcaption>
                               <h4 class="aa-product-title"><a href="#">Sahara PG</a></h4>
                               <span class="aa-product-price">Rs. 5500/month</span>
@@ -352,21 +352,21 @@
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/sports/sport-3.png" alt="polo shirt img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <a class="aa-product-img" href="#"><img src="img/rooms/mundi.jpg" alt="mundi img"></a>
+                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#">Divine Home Mundi Hostel</a></h4>
+                              <span class="aa-product-price">Rs. 4900/month</span>
                             </figcaption>
                           </figure>                          
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/sports/sport-4.png" alt="polo shirt img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <a class="aa-product-img" href="#"><img src="img/sports/sport-4.png" alt="hostel img"></a>
+                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#"></a></h4>
+                              <span class="aa-product-price">Rs. 4900/month</span>
                             </figcaption>
                           </figure>                         
                         </li>
