images and content writing

--- a/electronics.html
+++ b/electronics.html
@@ -97,14 +97,14 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="img/electronics/electronicsbanner.jpg" alt="fashion img">
-      <div class="aa-catg-head-banner-area">
+      <img src="img/electronicsbanner.jpg" alt="fashion img">
+      <!-- <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
             <h2>Electronics</h2>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- product category -->
