--- a/stationaries.html
+++ b/stationaries.html
@@ -97,14 +97,14 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="img/stationaries/stationariesbanner.jpeg" alt="banner img">
-      <div class="aa-catg-head-banner-area">
+      <img src="img/stationeriesbanner.jpg" alt="banner img">
+      <!-- <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
             <h2>Stationaries</h2>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- product category -->
