--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -97,14 +97,14 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="img/rooms/roomsbanner.png" alt="fashion img">
-      <div class="aa-catg-head-banner-area">
+      <img src="img/roomsbanner.jpg" alt="fashion img">
+      <!-- <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
             <h2>Hostel/PG Rooms</h2>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- product category -->
