images and content writing

--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -154,6 +154,17 @@
                       </figcaption>
                     </figure>                         
                   </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/rooms/aanadpg.jpg" alt="hostel img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Aanad PG</a></h4>
+                        <span class="aa-product-price">Rs. 2000/month</span>
+                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                      </figcaption>
+                    </figure>                         
+                  </li>
                 </ul>
               </div>
             </div>
