--- a/index.html
+++ b/index.html
@@ -362,11 +362,11 @@
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/sports/sport-4.png" alt="hostel img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/rooms/aanadpg.jpg" alt="hostel img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#"></a></h4>
-                              <span class="aa-product-price">Rs. 4900/month</span>
+                              <h4 class="aa-product-title">Aanad PG<a href="#"></a></h4>
+                              <span class="aa-product-price">Rs. 2000/month</span>
                             </figcaption>
                           </figure>                         
                         </li>
