images and content writing

--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -127,8 +127,18 @@
                       <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Shivalik PG</a></h4>
-                        <span class="aa-product-price">Rs. 4900</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <span class="aa-product-price">Rs. 4900/month</span>
+                        <p class="aa-product-descrip">Allahabad, Bajwara, Nandan, Hoshiarpur, Punjab 146021</p>
+                        <p class="aa-product-descrip">Rating by Google Users
+                        <div class="aa-product-rating">
+                          4.2  
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star-o"></span>
+                        </div>
+                        </p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -139,7 +149,17 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Sahara PG</a></h4>
                         <span class="aa-product-price">Rs. 5500/month</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">Main Una Road, Nandan Bajwara Road, Nandan, Hoshiarpur, Punjab 146001</p>
+                        <p class="aa-product-descrip">Rating by Google Users
+                        <div class="aa-product-rating">
+                          4.0
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star"></span>
+                          <span class="fa fa-star-o"></span>
+                        </div>
+                        </p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -150,7 +170,17 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Divine Home Mundi Hostel</a></h4>
                         <span class="aa-product-price">Rs. 4900/month</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">SH22, New Bains Colony, Hoshiarpur, Punjab 146021</p>
+                        <p class="aa-product-descrip">Rating by Google Users
+                          <div class="aa-product-rating">
+                            3.0
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star-o"></span>
+                            <span class="fa fa-star-o"></span>
+                          </div>
+                          </p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -161,7 +191,17 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Aanad PG</a></h4>
                         <span class="aa-product-price">Rs. 2000/month</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">Hoshiarpur Una Rd, Punjab 146110</p>
+                        <p class="aa-product-descrip">Rating by Google Users
+                          <div class="aa-product-rating">
+                            3.9
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star-o"></span>
+                          </div>
+                          </p>
                       </figcaption>
                     </figure>                         
                   </li>
