--- a/electronics.html
+++ b/electronics.html
@@ -128,7 +128,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Asus Zenfone Max Pro</a></h4>
                         <span class="aa-product-price">Rs. 5000</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">The ASUS Zenfone Max Pro has everything to keep you entertained and connected. It is of mettalic blue in colour.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1.5 Days</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -139,7 +140,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Boat Rockerz 400 Headphones</a></h4>
                         <span class="aa-product-price">Rs. 250</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">Now just stop worrying about wires hanging from here and there. Wired is passé. Connect with any Bluetooth device, connect and play. Plug into nirvana.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -150,7 +152,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lenovo IdeaPad</a></h4>
                         <span class="aa-product-price">Rs. 20,000</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">Sometimes it’s best to keep things simple. Stacked with premium processing and advanced graphics options, the Idea Pad 330 is as powerful as it is easy to use.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 3 Days</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -161,7 +164,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Moto G</a></h4>
                         <span class="aa-product-price">Rs. 3000</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">Say hello to Moto G6. Easy to handle and use. Having powerful processors and long battery-life gives enthusiasm and give relief from spontaneous charging. It is designed with you in mind!</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1.5 Days</p>
                       </figcaption>
                     </figure>                          
                   </li>
