--- a/products/motomobile.html
+++ b/products/motomobile.html
@@ -172,7 +172,7 @@
               <!-- Tab panes -->
               <div class="tab-content">
                 <div class="tab-pane fade in active" id="description">
-                  <p>Say hello to moto g6. With a 14.5 cm (5.7) Full HD+ Max Vision display, dual rear cameras with creative camera system, an all-day battery with TurboPowerTM charging, and a gorgeous 3D glass back, it’s designed with you in mind!</p>
+                  <p>Say hello to Moto G6. With a 14.5 cm (5.7) Full HD+ Max Vision display, dual rear cameras with creative camera system, an all-day battery with TurboPowerTM charging, and a gorgeous 3D glass back, it’s designed with you in mind!</p>
                   <ul>
                     <li>12MP Back Camera and 5MP Front Camera</li>
                     <li>3GB RAM</li>
