--- a/stationaries.html
+++ b/stationaries.html
@@ -128,7 +128,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Engineering Mathematics by B.S. Grewal</a></h4>
                         <span class="aa-product-price">Rs. 450</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">One of the best books for Engineering Mathematics by an Indian Author. It covers various topics regarding mathematics with a great ease.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -139,7 +140,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">OOPS by E. Balaguruswamy</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">One of the  most popular books of OOPs concept with C++. Author uses simple language for better understanding for engineering students</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -150,7 +152,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Catalysis Notes</a></h4>
                         <span class="aa-product-price">Rs. 15</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">These notes provides the core knowledge of Catalysis and one can guarantee good marks by just reading these notes.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -159,9 +162,10 @@
                       <a class="aa-product-img" href="#"><img src="img/stationaries/chempracticalmanual.jpg" alt="manual img"></a>
                       <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title">Chemistry Practical Manual<a href="#">C</a></h4>
+                        <h4 class="aa-product-title"><a href="#">Chemistry Practical Manual</a></h4>
                         <span class="aa-product-price">Rs. 25</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">The Manual contains various experiments with their viva questions giving complete knowledge in Applied Chemistry.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
                       </figcaption>
                     </figure>                          
                   </li>
@@ -172,7 +176,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Digital Design</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">This book is written by our own College Professor Dr. Gurpreet Singh Bains in which he uses simple language and numerous examples for understanding the core concept of Digital Electronics.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
                       </figcaption>
                     </figure>                 
                   </li>
@@ -183,7 +188,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Computer Fundamentals</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">One of the most important book for the newcomers to the Computer Science & Engineering, which give a glimpse of B.E. Degree by providing basic knowledge of every subjects that will be covered in 4 years.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
                       </figcaption>
                     </figure>                          
                   </li>
@@ -194,7 +200,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Polymers Notes</a></h4>
                         <span class="aa-product-price">Rs. 13</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">These notes provides the core knowledge of Polymers and their preparations and uses and one can guarantee good marks by just reading these notes.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
                       </figcaption>
                     </figure>                          
                   </li>
@@ -205,7 +212,8 @@
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">UV-VIS Notes</a></h4>
                         <span class="aa-product-price">Rs. 13</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                        <p class="aa-product-descrip">These notes provides the basic knowledge of UV-VIS Spectroscopy and one can guarantee good marks by just reading these notes.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
                       </figcaption>
                     </figure>                          
                   </li>
